DGC-303: Spacing issue at top of content fixed by adding padding to main area.

--- a/docroot/themes/custom/twentyeighteen/sass/components/_main.scss
+++ b/docroot/themes/custom/twentyeighteen/sass/components/_main.scss
@@ -3,6 +3,7 @@
   margin-top: 0;
   margin-bottom: 0;
   background-color: $pale-yellow;
+  padding-top: 1em;
 
   @include breakpoint($medium-max) {
     width: 1200px;
